custos-rest-proxy/src/main/resources/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: main-listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 50000 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stat_prefix: grpc_json
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: grpc-custos-service, timeout: { seconds: 60 } }
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: "/dev/stdout"
                http_filters:
                  - name: envoy.grpc_json_transcoder
                    config:
                      proto_descriptor: "/data/drms.pb"
                      services: ["org.apache.custos.agent.management.service.AgentManagementService",
                                 "org.apache.custos.group.management.service.GroupManagementService",
                                 "org.apache.custos.identity.management.service.IdentityManagementService",
                                 "org.apache.custos.log.management.service.LogManagementService",
                                 "org.apache.custos.resource.secret.management.service.ResourceSecretManagementService",
                                 "org.apache.custos.sharing.management.service.SharingManagementService",
                                 "org.apache.custos.tenant.management.service.TenantManagementService",
                                 "org.apache.custos.user.management.service.UserManagementService"]
                      convert_grpc_status: true
                      print_options:
                        add_whitespace: true
                        always_print_primitive_fields: true
                        always_print_enums_as_ints: false
                        preserve_proto_field_names: false
                  - name: envoy.router
  clusters:
    - name: grpc-custos-service
      connect_timeout: 1.25s
      type: logical_dns
      lb_policy: round_robin
      dns_lookup_family: V4_ONLY
      http2_protocol_options: {}
      hosts:
        - socket_address:
            address: host.docker.internal
            port_value: 7070
